syntax = "proto3";

option go_package = ".;interactions_pb";

/* import "messages/interactions.proto"; */
/* import "messages/keypad_conditions.proto"; */
/* import "messages/keypad_conditions_to_lamp_events.proto"; */
/* import "messages/lamp_on_events.proto"; */
/* import "messages/lamp_off_events.proto"; */
/* import "messages/lamp_toggle_events.proto"; */
/* import "messages/lamp_color_events.proto"; */
/* import "messages/lamp_pulse_events.proto"; */

package interactions_pb;

// events
message CreateLampEventRequest {
  string Mac = 1;
  string EventType = 2;
  int32 Red = 3;
  int32 Green = 4;
  int32 Blue = 5;
}

message CreateLampEventResponse {
  string ID = 1;
  string Mac = 2;
  string EventType = 3;
  int32 Red = 4;
  int32 Green = 5;
  int32 Blue = 6;
}

message GetLampEventRequest {
  string ID = 1;
}

message GetLampEventResponse {
  string ID = 1;
  string Mac = 2;
  string EventType = 3;
  int32 Red = 4;
  int32 Green = 5;
  int32 Blue = 6;
}

message UpdateLampEventRequest {
  string ID = 1;
  string Mac = 2;
  string EventType = 3;
  int32 Red = 4;
  int32 Green = 5;
  int32 Blue = 6;
}

message UpdateLampEventResponse {
  string ID = 1;
  string Mac = 2;
  string EventType = 3;
  int32 Red = 4;
  int32 Green = 5;
  int32 Blue = 6;
}

message DeleteLampEventRequest {
  string ID = 1;
}

message DeleteLampEventResponse {
  string ID = 1;
}

// attach
message CreateAttachRequest {
  string InteractionID = 1;
  string ConditionID = 2;
  string EventID = 3;
}

message CreateAttachResponse {
  string ID = 1;
  string InteractionID = 2;
  string ConditionID = 3;
  string EventID = 4;
}

message GetAttachRequest {
  string ID = 1;
}

message GetAttachResponse {
  string ID = 1;
  string InteractionID = 2;
  string ConditionID = 3;
  string EventID = 4;
}

message UpdateAttachRequest {
  string ID = 1;
  string InteractionID = 2;
  string ConditionID = 3;
  string EventID = 4;
}

message UpdateAttachResponse {
  string ID = 1;
  string InteractionID = 2;
  string ConditionID = 3;
  string EventID = 4; 
}

message DeleteAttachRequest {
  string ID = 1;
}

message DeleteAttachResponse {
  string ID = 1;
}

message CreateInteractionRequest {
  string Name = 1;
  string Description = 2;
}

message CreateInteractionResponse {
  string ID = 1;
  string Name = 2;
  string Description = 3;
}

message GetInteractionRequest {
  string ID = 1;
}

message GetInteractionResponse {
  string ID = 1;
  string Name = 2;
  string Description = 3;
}

message GetInteractionDetailsRequest {
  string ID = 1;
}

message GetInteractionDetailsResponse {
  string KeypadConditionID = 1;
  string KeypadConditionMac = 2;
  int32 KeypadConditionButtonID = 3;
  string LampEventType = 4;
  string LampEventID = 5;
  string LampEventMac = 6;
  int32 LampEventBrightness = 7;
  int32 LampEventRed = 8;
  int32 LampEventGreen = 9;
  int32 LampEventBlue = 10;
}

message UpdateInteractionRequest {
  string ID = 1;
  string Name = 2;
  string Description = 3;
}

message UpdateInteractionResponse {
  string ID = 1;
  string Name = 2;
  string Description = 3;
}

message DeleteInteractionRequest {
  string ID = 1;
}

message DeleteInteractionResponse {
  string ID = 1;
}

message CreateKeypadConditionRequest {
  string Mac = 1;
  int32 ButtonID = 2;
}

message CreateKeypadConditionResponse {
  string ID = 1;
  string Mac= 2;
  int32 ButtonID = 3;
}

message GetKeypadConditionRequest {
  string ID = 1;
}

message GetKeypadConditionResponse {
  string ID = 1;
  string Mac= 2;
  int32 ButtonID = 333;
}

message UpdateKeypadConditionRequest {
  string ID = 1;
  string Mac= 2;
  int32 ButtonID = 3;
}

message UpdateKeypadConditionResponse {
  string ID = 1;
  string Mac= 2;
  int32 ButtonID = 3;
}

message DeleteKeypadConditionRequest {
  string ID = 1;
}

message DeleteKeypadConditionResponse {
  string ID = 1;
}

message CreateKeypadConditionToLampEventRequest {
  string InteractionID = 1;
  string ConditionID = 2;
  string EventID = 3;
}

message CreateKeypadConditionToLampEventResponse {
  string ID = 1;
  string InteractionID = 2;
  string ConditionID = 3;
  string EventID = 4;
}

message GetKeypadConditionToLampEventRequest {
  string ID = 1;
}

message GetKeypadConditionToLampEventResponse {
  string ID = 1;
  string InteractionID = 2;
  string ConditionID = 3;
  string EventID = 4;
}

message UpdateKeypadConditionToLampEventRequest {
  string ID = 1;
  string InteractionID = 2;
  string ConditionID = 3;
  string EventID = 4;
}

message UpdateKeypadConditionToLampEventResponse {
  string ID = 1;
  string InteractionID = 2;
  string ConditionID = 3;
  string EventID = 4; 
}

message DeleteKeypadConditionToLampEventRequest {
  string ID = 1;
}

message DeleteKeypadConditionToLampEventResponse {
  string ID = 1;
}

message CreateLampColorEventRequest {
  string Mac = 1;
  int32 Red = 2;
  int32 Green = 3;
  int32 Blue = 4;
}

message CreateLampColorEventResponse {
  string ID = 1;
  string Mac = 2;
  int32 Red = 3;
  int32 Green = 4;
  int32 Blue = 5;
}

message GetLampColorEventRequest {
  string ID = 1;
}

message GetLampColorEventResponse {
  string ID = 1;
  string Mac = 2;
  int32 Red = 3;
  int32 Green = 4;
  int32 Blue = 5;
}

message UpdateLampColorEventRequest {
  string ID = 1;
  string Mac = 2;
  int32 Red = 3;
  int32 Green = 4;
  int32 Blue = 5;
}

message UpdateLampColorEventResponse {
  string ID = 1;
  string Mac = 2;
  int32 Red = 3;
  int32 Green = 4;
  int32 Blue = 5;
}

message DeleteLampColorEventRequest {
  string ID = 1;
}

message DeleteLampColorEventResponse {
  string ID = 1;
}

message CreateLampOffEventRequest {
  string Mac = 1;
}

message CreateLampOffEventResponse {
  string ID = 1;
  string Mac = 2;
}

message GetLampOffEventRequest {
  string ID = 1;
}

message GetLampOffEventResponse {
  string ID = 1;
  string Mac = 2;
}

message UpdateLampOffEventRequest {
  string ID = 1;
  string Mac = 2;
}

message UpdateLampOffEventResponse {
  string ID = 1;
  string Mac = 2;
}

message DeleteLampOffEventRequest {
  string ID = 1;
}

message DeleteLampOffEventResponse {
  string ID = 1;
}

message CreateLampOnEventRequest {
  string Mac = 1;
}

message CreateLampOnEventResponse {
  string ID = 1;
  string Mac = 2;
}

message GetLampOnEventRequest {
  string ID = 1;
}

message GetLampOnEventResponse {
  string ID = 1;
  string Mac = 2;
}

message UpdateLampOnEventRequest {
  string ID = 1;
  string Mac = 2;
}

message UpdateLampOnEventResponse {
  string ID = 1;
  string Mac = 2;
}

message DeleteLampOnEventRequest {
  string ID = 1;
}

message DeleteLampOnEventResponse {
  string ID = 1;
}

message CreateLampPulseEventRequest {
  string Mac = 1;
  int32 Red = 3;
  int32 Green = 4;
  int32 Blue = 5;
}

message CreateLampPulseEventResponse {
  string ID = 1;
  string Mac = 2;
  int32 Red = 3;
  int32 Green = 4;
  int32 Blue = 5;
}

message GetLampPulseEventRequest {
  string ID = 1;
}

message GetLampPulseEventResponse {
  string ID = 1;
  string Mac = 2;
  int32 Red = 3;
  int32 Green = 4;
  int32 Blue = 5;
}

message UpdateLampPulseEventRequest {
  string ID = 1;
  string Mac = 2;
  int32 Red = 3;
  int32 Green = 4;
  int32 Blue = 5;
}

message UpdateLampPulseEventResponse {
  string ID = 1;
  string Mac = 2;
  int32 Red = 3;
  int32 Green = 4;
  int32 Blue = 5;
}

message DeleteLampPulseEventRequest {
  string ID = 1;
}

message DeleteLampPulseEventResponse {
  string ID = 1;
}

message CreateLampToggleEventRequest {
  string Mac = 1;
}

message CreateLampToggleEventResponse {
  string ID = 1;
  string Mac = 2;
}

message GetLampToggleEventRequest {
  string ID = 1;
}

message GetLampToggleEventResponse {
  string ID = 1;
  string Mac = 2;
}

message UpdateLampToggleEventRequest {
  string ID = 1;
  string Mac = 2;
}

message UpdateLampToggleEventResponse {
  string ID = 1;
  string Mac = 2;
}

message DeleteLampToggleEventRequest {
  string ID = 1;
}

message DeleteLampToggleEventResponse {
  string ID = 1;
}

message CreateLampBrightnessEventRequest{
  string Mac = 1;
  int32 Brightness = 2;
}

message CreateLampBrightnessEventResponse {
  string ID = 1;
  string Mac = 2;
  int32 Brightness = 3;
}

message GetLampBrightnessEventRequest {
  string ID = 1;
}

message GetLampBrightnessEventResponse {
  string ID = 1;
  string Mac = 2;
  int32 Brightness = 3;
}

message UpdateLampBrightnessEventRequest {
  string ID = 1;
  string Mac = 2;
  int32 Brightness = 3;
}

message UpdateLampBrightnessEventResponse {
  string ID = 1;
  string Mac = 2;
  int32 Brightness = 3;
}

message DeleteLampBrightnessEventRequest {
  string ID = 1;
}

message DeleteLampBrightnessEventResponse {
  string ID = 1;
}

message CreateLampAutoBrightnessOnEventRequest{
  string Mac = 1;
}

message CreateLampAutoBrightnessOnEventResponse {
  string ID = 1;
  string Mac = 2;
}

message GetLampAutoBrightnessOnEventRequest {
  string ID = 1;
}

message GetLampAutoBrightnessOnEventResponse {
  string ID = 1;
  string Mac = 2;
}

message UpdateLampAutoBrightnessOnEventRequest {
  string ID = 1;
  string Mac = 2;
}

message UpdateLampAutoBrightnessOnEventResponse {
  string ID = 1;
  string Mac = 2;
}

message DeleteLampAutoBrightnessOnEventRequest {
  string ID = 1;
}

message DeleteLampAutoBrightnessOnEventResponse {
  string ID = 1;
}

message CreateLampAutoBrightnessOffEventRequest{
  string Mac = 1;
}

message CreateLampAutoBrightnessOffEventResponse {
  string ID = 1;
  string Mac = 2;
}

message GetLampAutoBrightnessOffEventRequest {
  string ID = 1;
}

message GetLampAutoBrightnessOffEventResponse {
  string ID = 1;
  string Mac = 2;
}

message UpdateLampAutoBrightnessOffEventRequest {
  string ID = 1;
  string Mac = 2;
}

message UpdateLampAutoBrightnessOffEventResponse {
  string ID = 1;
  string Mac = 2;
}

message DeleteLampAutoBrightnessOffEventRequest {
  string ID = 1;
}

message DeleteLampAutoBrightnessOffEventResponse {
  string ID = 1;
}

message CreateLampAutoBrightnessToggleEventRequest{
  string Mac = 1;
}

message CreateLampAutoBrightnessToggleEventResponse {
  string ID = 1;
  string Mac = 2;
}

message GetLampAutoBrightnessToggleEventRequest {
  string ID = 1;
}

message GetLampAutoBrightnessToggleEventResponse {
  string ID = 1;
  string Mac = 2;
}

message UpdateLampAutoBrightnessToggleEventRequest {
  string ID = 1;
  string Mac = 2;
}

message UpdateLampAutoBrightnessToggleEventResponse {
  string ID = 1;
  string Mac = 2;
}

message DeleteLampAutoBrightnessToggleEventRequest {
  string ID = 1;
}

message DeleteLampAutoBrightnessToggleEventResponse {
  string ID = 1;
}

service InteractionsService {
  
  // interactions
  rpc CreateInteraction(CreateInteractionRequest) returns (CreateInteractionResponse);
  rpc GetInteraction(GetInteractionRequest) returns (GetInteractionResponse);
  rpc GetInteractionDetails(GetInteractionDetailsRequest) returns (stream GetInteractionDetailsResponse);
  rpc UpdateInteraction(UpdateInteractionRequest) returns (UpdateInteractionResponse);
  rpc DeleteInteraction(DeleteInteractionRequest) returns (DeleteInteractionResponse);

  // keypad conditions
  rpc CreateKeypadCondition(CreateKeypadConditionRequest) returns (CreateKeypadConditionResponse);
  rpc GetKeypadCondition(GetKeypadConditionRequest) returns (GetKeypadConditionResponse);
  rpc UpdateKeypadCondition(UpdateKeypadConditionRequest) returns (UpdateKeypadConditionResponse);
  rpc DeleteKeypadCondition(DeleteKeypadConditionRequest) returns (DeleteKeypadConditionResponse);

  // lamp events
  rpc CreateLampEvent(CreateLampEventRequest) returns (CreateLampEventResponse);
  rpc GetLampEvent(GetLampEventRequest) returns (GetLampEventResponse);
  rpc UpdateLampEvent(UpdateLampEventRequest) returns (UpdateLampEventResponse);
  rpc DeleteLampEvent(DeleteLampEventRequest) returns (DeleteLampEventResponse);

  // lamp on events
  rpc CreateLampOnEvent(CreateLampOnEventRequest) returns (CreateLampOnEventResponse);
  rpc GetLampOnEvent(GetLampOnEventRequest) returns (GetLampOnEventResponse);
  rpc UpdateLampOnEvent(UpdateLampOnEventRequest) returns (UpdateLampOnEventResponse);
  rpc DeleteLampOnEvent(DeleteLampOnEventRequest) returns (DeleteLampOnEventResponse);

  // lamp off events
  rpc CreateLampOffEvent(CreateLampOffEventRequest) returns (CreateLampOffEventResponse);
  rpc GetLampOffEvent(GetLampOffEventRequest) returns (GetLampOffEventResponse);
  rpc UpdateLampOffEvent(UpdateLampOffEventRequest) returns (UpdateLampOffEventResponse);
  rpc DeleteLampOffEvent(DeleteLampOffEventRequest) returns (DeleteLampOffEventResponse);

  // lamp toggle events
  rpc CreateLampToggleEvent(CreateLampToggleEventRequest) returns (CreateLampToggleEventResponse);
  rpc GetLampToggleEvent(GetLampToggleEventRequest) returns (GetLampToggleEventResponse);
  rpc UpdateLampToggleEvent(UpdateLampToggleEventRequest) returns (UpdateLampToggleEventResponse);
  rpc DeleteLampToggleEvent(DeleteLampToggleEventRequest) returns (DeleteLampToggleEventResponse);

  // lamp brightness events
  rpc CreateLampBrightnessEvent(CreateLampBrightnessEventRequest) returns (CreateLampBrightnessEventResponse);
  rpc GetLampBrightnessEvent(GetLampBrightnessEventRequest) returns (GetLampBrightnessEventResponse);
  rpc UpdateLampBrightnessEvent(UpdateLampBrightnessEventRequest) returns (UpdateLampBrightnessEventResponse);
  rpc DeleteLampBrightnessEvent(DeleteLampBrightnessEventRequest) returns (DeleteLampBrightnessEventResponse);

  // lamp auto brightness on events
  rpc CreateLampAutoBrightnessOnEvent(CreateLampAutoBrightnessOnEventRequest) returns (CreateLampAutoBrightnessOnEventResponse);
  rpc GetLampAutoBrightnessOnEvent(GetLampAutoBrightnessOnEventRequest) returns (GetLampAutoBrightnessOnEventResponse);
  rpc UpdateLampAutoBrightnessOnEvent(UpdateLampAutoBrightnessOnEventRequest) returns (UpdateLampAutoBrightnessOnEventResponse);
  rpc DeleteLampAutoBrightnessOnEvent(DeleteLampAutoBrightnessOnEventRequest) returns (DeleteLampAutoBrightnessOnEventResponse);

  // lamp auto brightness off events
  rpc CreateLampAutoBrightnessOffEvent(CreateLampAutoBrightnessOffEventRequest) returns (CreateLampAutoBrightnessOffEventResponse);
  rpc GetLampAutoBrightnessOffEvent(GetLampAutoBrightnessOffEventRequest) returns (GetLampAutoBrightnessOffEventResponse);
  rpc UpdateLampAutoBrightnessOffEvent(UpdateLampAutoBrightnessOffEventRequest) returns (UpdateLampAutoBrightnessOffEventResponse);
  rpc DeleteLampAutoBrightnessOffEvent(DeleteLampAutoBrightnessOffEventRequest) returns (DeleteLampAutoBrightnessOffEventResponse);

  // lamp auto brightness toggle events
  rpc CreateLampAutoBrightnessToggleEvent(CreateLampAutoBrightnessToggleEventRequest) returns (CreateLampAutoBrightnessToggleEventResponse);
  rpc GetLampAutoBrightnessToggleEvent(GetLampAutoBrightnessToggleEventRequest) returns (GetLampAutoBrightnessToggleEventResponse);
  rpc UpdateLampAutoBrightnessToggleEvent(UpdateLampAutoBrightnessToggleEventRequest) returns (UpdateLampAutoBrightnessToggleEventResponse);
  rpc DeleteLampAutoBrightnessToggleEvent(DeleteLampAutoBrightnessToggleEventRequest) returns (DeleteLampAutoBrightnessToggleEventResponse);

  // lamp color events
  rpc CreateLampColorEvent(CreateLampColorEventRequest) returns (CreateLampColorEventResponse);
  rpc GetLampColorEvent(GetLampColorEventRequest) returns (GetLampColorEventResponse);
  rpc UpdateLampColorEvent(UpdateLampColorEventRequest) returns (UpdateLampColorEventResponse);
  rpc DeleteLampColorEvent(DeleteLampColorEventRequest) returns (DeleteLampColorEventResponse);

  // lamp pulse events
  rpc CreateLampPulseEvent(CreateLampPulseEventRequest) returns (CreateLampPulseEventResponse);
  rpc GetLampPulseEvent(GetLampPulseEventRequest) returns (GetLampPulseEventResponse);
  rpc UpdateLampPulseEvent(UpdateLampPulseEventRequest) returns (UpdateLampPulseEventResponse);
  rpc DeleteLampPulseEvent(DeleteLampPulseEventRequest) returns (DeleteLampPulseEventResponse);

  // attach
  rpc CreateAttach(CreateAttachRequest) returns (CreateAttachResponse);
  rpc GetAttach(GetAttachRequest) returns (GetAttachResponse);
  rpc UpdateAttach(UpdateAttachRequest) returns (UpdateAttachResponse);
  rpc DeleteAttach(DeleteAttachRequest) returns (DeleteAttachResponse);

  // keypad condition to lamp event
  rpc CreateKeypadConditionToLampEvent(CreateKeypadConditionToLampEventRequest) returns (CreateKeypadConditionToLampEventResponse);
  rpc GetKeypadConditionToLampEvent(GetKeypadConditionToLampEventRequest) returns (GetKeypadConditionToLampEventResponse);
  rpc UpdateKeypadConditionToLampEvent(UpdateKeypadConditionToLampEventRequest) returns (UpdateKeypadConditionToLampEventResponse);
  rpc DeleteKeypadConditionToLampEvent(DeleteKeypadConditionToLampEventRequest) returns (DeleteKeypadConditionToLampEventResponse);
}
