syntax = "proto3";

option go_package = ".;interactions_pb";

import "messages/interactions_messages.proto";
import "messages/keypad_conditions_messages.proto";
import "messages/keypad_conditions_to_lamp_events_messages.proto";
import "messages/lamp_on_events_messages.proto";
import "messages/lamp_off_events_messages.proto";
import "messages/lamp_toggle_events_messages.proto";
import "messages/lamp_color_events_messages.proto";
import "messages/lamp_pulse_events_messages.proto";
import "messages/lamp_brightness_events_messages.proto";
import "messages/lamp_auto_brightness_on_events_messages.proto";
import "messages/lamp_auto_brightness_off_events_messages.proto";
import "messages/lamp_auto_brightness_toggle_events_messages.proto";

// FIXME: depreciate these
import "messages/lamp_event_messages.proto";
import "messages/attach_messages.proto";

package interactions_pb;

service InteractionsService {
  
  // interactions
  rpc CreateInteraction(CreateInteractionRequest) returns (CreateInteractionResponse);
  rpc GetInteraction(GetInteractionRequest) returns (GetInteractionResponse);
  rpc GetAllInteractions(GetAllInteractionsRequest) returns (stream GetInteractionResponse);
  rpc GetInteractionDetails(GetInteractionDetailsRequest) returns (stream GetInteractionDetailsResponse);
  rpc UpdateInteraction(UpdateInteractionRequest) returns (UpdateInteractionResponse);
  rpc DeleteInteraction(DeleteInteractionRequest) returns (DeleteInteractionResponse);

  // keypad conditions
  rpc CreateKeypadCondition(CreateKeypadConditionRequest) returns (CreateKeypadConditionResponse);
  rpc GetKeypadCondition(GetKeypadConditionRequest) returns (GetKeypadConditionResponse);
  rpc UpdateKeypadCondition(UpdateKeypadConditionRequest) returns (UpdateKeypadConditionResponse);
  rpc DeleteKeypadCondition(DeleteKeypadConditionRequest) returns (DeleteKeypadConditionResponse);

  // lamp events
  rpc CreateLampEvent(CreateLampEventRequest) returns (CreateLampEventResponse);
  rpc GetLampEvent(GetLampEventRequest) returns (GetLampEventResponse);
  rpc UpdateLampEvent(UpdateLampEventRequest) returns (UpdateLampEventResponse);
  rpc DeleteLampEvent(DeleteLampEventRequest) returns (DeleteLampEventResponse);

  // lamp on events
  rpc CreateLampOnEvent(CreateLampOnEventRequest) returns (CreateLampOnEventResponse);
  rpc GetLampOnEvent(GetLampOnEventRequest) returns (GetLampOnEventResponse);
  rpc UpdateLampOnEvent(UpdateLampOnEventRequest) returns (UpdateLampOnEventResponse);
  rpc DeleteLampOnEvent(DeleteLampOnEventRequest) returns (DeleteLampOnEventResponse);

  // lamp off events
  rpc CreateLampOffEvent(CreateLampOffEventRequest) returns (CreateLampOffEventResponse);
  rpc GetLampOffEvent(GetLampOffEventRequest) returns (GetLampOffEventResponse);
  rpc UpdateLampOffEvent(UpdateLampOffEventRequest) returns (UpdateLampOffEventResponse);
  rpc DeleteLampOffEvent(DeleteLampOffEventRequest) returns (DeleteLampOffEventResponse);

  // lamp toggle events
  rpc CreateLampToggleEvent(CreateLampToggleEventRequest) returns (CreateLampToggleEventResponse);
  rpc GetLampToggleEvent(GetLampToggleEventRequest) returns (GetLampToggleEventResponse);
  rpc UpdateLampToggleEvent(UpdateLampToggleEventRequest) returns (UpdateLampToggleEventResponse);
  rpc DeleteLampToggleEvent(DeleteLampToggleEventRequest) returns (DeleteLampToggleEventResponse);

  // lamp brightness events
  rpc CreateLampBrightnessEvent(CreateLampBrightnessEventRequest) returns (CreateLampBrightnessEventResponse);
  rpc GetLampBrightnessEvent(GetLampBrightnessEventRequest) returns (GetLampBrightnessEventResponse);
  rpc UpdateLampBrightnessEvent(UpdateLampBrightnessEventRequest) returns (UpdateLampBrightnessEventResponse);
  rpc DeleteLampBrightnessEvent(DeleteLampBrightnessEventRequest) returns (DeleteLampBrightnessEventResponse);

  // lamp auto brightness on events
  rpc CreateLampAutoBrightnessOnEvent(CreateLampAutoBrightnessOnEventRequest) returns (CreateLampAutoBrightnessOnEventResponse);
  rpc GetLampAutoBrightnessOnEvent(GetLampAutoBrightnessOnEventRequest) returns (GetLampAutoBrightnessOnEventResponse);
  rpc UpdateLampAutoBrightnessOnEvent(UpdateLampAutoBrightnessOnEventRequest) returns (UpdateLampAutoBrightnessOnEventResponse);
  rpc DeleteLampAutoBrightnessOnEvent(DeleteLampAutoBrightnessOnEventRequest) returns (DeleteLampAutoBrightnessOnEventResponse);

  // lamp auto brightness off events
  rpc CreateLampAutoBrightnessOffEvent(CreateLampAutoBrightnessOffEventRequest) returns (CreateLampAutoBrightnessOffEventResponse);
  rpc GetLampAutoBrightnessOffEvent(GetLampAutoBrightnessOffEventRequest) returns (GetLampAutoBrightnessOffEventResponse);
  rpc UpdateLampAutoBrightnessOffEvent(UpdateLampAutoBrightnessOffEventRequest) returns (UpdateLampAutoBrightnessOffEventResponse);
  rpc DeleteLampAutoBrightnessOffEvent(DeleteLampAutoBrightnessOffEventRequest) returns (DeleteLampAutoBrightnessOffEventResponse);

  // lamp auto brightness toggle events
  rpc CreateLampAutoBrightnessToggleEvent(CreateLampAutoBrightnessToggleEventRequest) returns (CreateLampAutoBrightnessToggleEventResponse);
  rpc GetLampAutoBrightnessToggleEvent(GetLampAutoBrightnessToggleEventRequest) returns (GetLampAutoBrightnessToggleEventResponse);
  rpc UpdateLampAutoBrightnessToggleEvent(UpdateLampAutoBrightnessToggleEventRequest) returns (UpdateLampAutoBrightnessToggleEventResponse);
  rpc DeleteLampAutoBrightnessToggleEvent(DeleteLampAutoBrightnessToggleEventRequest) returns (DeleteLampAutoBrightnessToggleEventResponse);

  // lamp color events
  rpc CreateLampColorEvent(CreateLampColorEventRequest) returns (CreateLampColorEventResponse);
  rpc GetLampColorEvent(GetLampColorEventRequest) returns (GetLampColorEventResponse);
  rpc UpdateLampColorEvent(UpdateLampColorEventRequest) returns (UpdateLampColorEventResponse);
  rpc DeleteLampColorEvent(DeleteLampColorEventRequest) returns (DeleteLampColorEventResponse);

  // lamp pulse events
  rpc CreateLampPulseEvent(CreateLampPulseEventRequest) returns (CreateLampPulseEventResponse);
  rpc GetLampPulseEvent(GetLampPulseEventRequest) returns (GetLampPulseEventResponse);
  rpc UpdateLampPulseEvent(UpdateLampPulseEventRequest) returns (UpdateLampPulseEventResponse);
  rpc DeleteLampPulseEvent(DeleteLampPulseEventRequest) returns (DeleteLampPulseEventResponse);

  // attach
  rpc CreateAttach(CreateAttachRequest) returns (CreateAttachResponse);
  rpc GetAttach(GetAttachRequest) returns (GetAttachResponse);
  rpc UpdateAttach(UpdateAttachRequest) returns (UpdateAttachResponse);
  rpc DeleteAttach(DeleteAttachRequest) returns (DeleteAttachResponse);

  // keypad condition to lamp event
  rpc CreateKeypadConditionToLampEvent(CreateKeypadConditionToLampEventRequest) returns (CreateKeypadConditionToLampEventResponse);
  rpc GetKeypadConditionToLampEvent(GetKeypadConditionToLampEventRequest) returns (GetKeypadConditionToLampEventResponse);
  rpc UpdateKeypadConditionToLampEvent(UpdateKeypadConditionToLampEventRequest) returns (UpdateKeypadConditionToLampEventResponse);
  rpc DeleteKeypadConditionToLampEvent(DeleteKeypadConditionToLampEventRequest) returns (DeleteKeypadConditionToLampEventResponse);
}

